# local-audiobook

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  INSTALLATION.md  PASSE_2_RAPPORT.md  README.md  pyproject.toml  test_pipeline.py  test_sample.txt
_bmad-output/: completion-report.md  project-brief.md
_bmad-output/implementation-artifacts/: 1-1-initialize-local-application-foundation-and-persistent-job-store.md  1-2-validate-model-assets-and-engine-health-at-startup.md  1-3-surface-offline-readiness-status-and-actionable-remediation-in-ui.md  2-1-import-local-multi-format-documents-with-input-validation.md  2-2-extract-clean-text-from-epub-with-actionable-failure-handling.md  2-3-extract-text-from-pdf-with-degraded-case-handling.md  2-4-extract-and-normalize-txt-and-markdown-inputs.md  2-5-provide-unified-extraction-error-feedback-and-diagnostics.md  3-1-implement-unified-tts-provider-contract-and-engine-adapters.md  3-2-segment-long-text-with-phrase-first-chunking-rules.md  3-3-orchestrate-deterministic-conversion-with-engine-fallback.md  3-4-persist-job-lifecycle-and-resume-conversion-from-last-failed-chunk.md  3-5-configure-conversion-parameters-and-output-format-in-ui.md  3-6-execute-conversion-in-dedicated-worker-with-non-blocking-ui-signals.md  4-1-assemble-synthesized-chunks-into-final-audio-output.md  (+22 more)
config/: app_config.yaml  logging_config.yaml  model_manifest.yaml
migrations/: 0001_initial_schema.sql  0002_add_source_format_to_documents.sql  0003_extend_library_items_metadata.sql
runtime/: local_audiobook.db-shm  local_audiobook.db-wal
(+119 files in other folders)
