[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-audiobook"
version = "0.1.0"
description = "Local audiobook converter foundation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "EbookLib>=0.18",
  "PyPDF2>=3.0.0",
  "PyQt5>=5.15.0",
  "pyttsx3>=2.90",
]

# Optional dependencies for production TTS engines
# NOTE: These require Python 3.11 and additional system setup
# See INSTALLATION.md for complete instructions
[project.optional-dependencies.tts-production]
dependencies = [
  # "torch>=2.0.0",  # Install separately with ROCm support
  # "chatterbox-tts>=0.1.0",  # Requires torch with CUDA/ROCm
  # "kokoro-tts>=0.1.0",  # Lightweight CPU fallback
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
